spring-boot-docker-GKE-course-20250508/svc/bk/ingress_group.yaml
# 測試ALB OK
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  labels:
    app: api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: app-api-lb
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: spring-boot-app
                port:
                  number: 80
